--- a/.gitignore
+++ b/.gitignore
@@ -214,4 +214,8 @@ pip-log.txt
 #Mr Developer
 .mr.developer.cfg
 
+#############
+## Sass & Codekit config
+#############
 .sass-cache
+config.codekit
